# libpeggle

./: CMakeLists.txt  README.md  binstream.h  iohelper.cpp  iohelper.h  libpeggle.cpp  libpeggle.h  library.cpp  library.h  macros.h  peggleconfig.cpp  pegglelevel.cpp  utils.h
testing/: main.cpp  simple.pak  testtrophy.cfg
